--- a/frontend/main.html
+++ b/frontend/main.html
@@ -11,42 +11,27 @@
         <h1>Translator</h1>
         <form id="translate-form">
             <textarea id="text" placeholder="Enter text to translate" rows="4"></textarea>
-            <select id="src-lang">
-                <option value="en">English</option>
-                <option value="es">Spanish</option>
-                <option value="fr">French</option>
-                <option value="de">German</option>
-                <option value="it">Italian</option>
-                <option value="ja">Japanese</option>
-                <option value="ko">Korean</option>
-                <option value="pt">Portuguese</option>
-                <option value="ru">Russian</option>
-                <option value="ar">Arabic</option>
-                <option value="zh-CN">Chinese (Simplified)</option>
-                <option value="hi">Hindi</option>
-                <option value="nl">Dutch</option>
-                <option value="sv">Swedish</option>
-            </select>
-            <select id="dest-lang">
-                <option value="en">English</option>
-                <option value="es">Spanish</option>
-                <option value="fr">French</option>
-                <option value="de">German</option>
-                <option value="it">Italian</option>
-                <option value="ja">Japanese</option>
-                <option value="ko">Korean</option>
-                <option value="pt">Portuguese</option>
-                <option value="ru">Russian</option>
-                <option value="ar">Arabic</option>
-                <option value="zh-CN">Chinese (Simplified)</option>
-                <option value="hi">Hindi</option>
-                <option value="nl">Dutch</option>
-                <option value="sv">Swedish</option>
-            </select>
+            <select id="src-lang"></select>
+            <select id="dest-lang"></select>
             <button type="submit">Translate</button>
         </form>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
+    <script>
+        fetch('availLang.json')
+            .then(response => response.json())
+            .then(data => {
+                const srcLangSelect = document.getElementById('src-lang');
+                const destLangSelect = document.getElementById('dest-lang');
+                data.languages.forEach(lang => {
+                    const option = document.createElement('option');
+                    option.value = lang.code;
+                    option.textContent = lang.name;
+                    srcLangSelect.appendChild(option.cloneNode(true));
+                    destLangSelect.appendChild(option);
+                });
+            });
+    </script>
 </body>
 </html>
